--- a/CSS/artea.css
+++ b/CSS/artea.css
@@ -1,111 +1,130 @@
 body {
-    background-color: #f8eae7;
+  background-color: #f8eae7;
 }
 
 .header {
-    display: inline-block;
-    width: 100%;
-    height: auto;
-    text-align: center;
+  display: inline-block;
+  width: 100%;
+  height: auto;
+  text-align: center;
 }
 
 .hd__logo {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .hd__navbar {
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
 }
-
-
 
 .nav__link {
-    text-decoration: none;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 1.5rem;
-    font-weight: bold;
-    color: white;
-    -webkit-text-stroke: 0.5px;
-    -webkit-text-stroke-color: red;
-    
+  text-decoration: none;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: white;
+  -webkit-text-stroke: 0.5px;
+  -webkit-text-stroke-color: red;
 }
 
-
 .footer {
-   display: flex;
-   align-items: center;
-   justify-content: space-evenly;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
 }
 
 .footer__logo {
-    width: 30%;
-    height: auto;
+  width: 30%;
+  height: auto;
 }
 
 .footer__item {
-    width: 140%;
-    height: auto;
+  width: 10%;
+  height: auto;
 }
 
 .imagenes {
-    width: 400px;
-    height: auto;
+  width: 400px;
+  height: auto;
+}
+
+.contactoRedes {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+.contactoEncuentranos {
+  max-width: 2rem;
+  max-height: 2rem;
+  text-align: center;
 }
 
 .producto {
-    margin: 0.5rem;
+  margin: 0.5rem;
 }
 
 .botonComprar {
-    color: blueviolet;
-    background-color: black;
+  color: blueviolet;
+  background-color: black;
 }
 
 /*--MODAL DEL CARRITO--*/
 .modal-content {
-    padding: 20px 0;
+  padding: 20px 0;
 }
 
 .modal-wrapper {
-    display: none;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    background: rgba(0, 0, 0, 0.5);
-    z-index: 10;
-    justify-content: center;
-    align-items: center;
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 10;
+  justify-content: center;
+  align-items: center;
 }
 
 .modal-opened {
-    display: flex;
+  display: flex;
 }
 
 .modal-cont {
-    background: white;
-    width: 500px;
-    height: 600px;
-    border-radius: 5px;
+  background: white;
+  width: 500px;
+  height: 600px;
+  border-radius: 5px;
 }
 
 .modal-header {
-    display: flex;
-    justify-content: flex-end;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .modal-header button {
-    width: 100px;
-    margin: 10px;
+  width: 100px;
+  margin: 10px;
 }
 
 .vaciar-carrito {
-    width: 100px;
-    margin: 10px;
-    display: flex;
-    justify-content: flex-end;
+  width: 100px;
+  margin: 10px;
+  display: flex;
+  justify-content: flex-end;
 }
+
+.contenedor-de-productos {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 10px;
+  grid-auto-rows: minmax(100px, auto);
+}
+
+.producto {
+  max-width: 100%;
+  max-height: 100%;
+}/*# sourceMappingURL=artea.css.map */
