--- a/CSS/parciales/_contacto.scss
+++ b/CSS/parciales/_contacto.scss
@@ -1,12 +1,13 @@
-.contacto{
- font-weight: 400px;
+.contacto {
+	
+&Redes {
+	display: flex;
+	align-items: center;
+	justify-content: space-evenly;
 }
 
-&Redes{
-    display: inline-block;
-    border: 1px solid black;
-	width: 100px;
-	height: 100px;
-	padding: 5px;
-	margin: 50px 10px;
-}
+&Encuentranos {
+	max-width: 2rem;
+	max-height: 2rem;
+	text-align: center;
+}}
