--- a/CSS/artea.css
+++ b/CSS/artea.css
@@ -117,6 +117,13 @@ body {
   justify-content: flex-end;
 }
 
+.comprar-carrito {
+  width: 100px;
+  margin: 10px;
+  display: flex;
+  justify-content: flex-end;
+}
+
 .contenedor-de-productos {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
